flink/test/corpus/module_jar.txt
================================================================================
LOAD MODULE
================================================================================

LOAD MODULE hive WITH ('hive-version' = '3.1.3')

--------------------------------------------------------------------------------

(program
  (statement
    (load_module
      (keyword_load)
      (keyword_module)
      (identifier)
      (flink_options (keyword_with) (literal) (literal)))))

================================================================================
UNLOAD MODULE
================================================================================

UNLOAD MODULE core

--------------------------------------------------------------------------------

(program
  (statement
    (unload_module
      (keyword_unload)
      (keyword_module)
      (identifier))))

================================================================================
USE MODULES
================================================================================

USE MODULES hive, core

--------------------------------------------------------------------------------

(program
  (statement
    (use_modules_statement
      (keyword_use)
      (keyword_modules)
      (identifier)
      (identifier))))

================================================================================
ADD JAR
================================================================================

ADD JAR '/path/to/my-udf.jar'

--------------------------------------------------------------------------------

(program
  (statement
    (add_jar
      (keyword_add)
      (keyword_jar)
      (literal))))

================================================================================
REMOVE JAR
================================================================================

REMOVE JAR '/path/to/my-udf.jar'

--------------------------------------------------------------------------------

(program
  (statement
    (remove_jar
      (keyword_remove)
      (keyword_jar)
      (literal))))
